--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
-    <title>Тестовый сервер</title>
+   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>РўРµСЃС‚РѕРІС‹Р№ СЃРµСЂРІРµСЂ</title>
     <link href="styles/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   </head>
   <body>
-    <h1> Моя любимая девочка! </h1>
-    <img src="images/image_1.jpg" alt="Моя девушка Ирма">
-   <p>Итак, здесь небольшая история о том, как я её встретил... </p>
-<p>Это было банально на учёбе, я учился тогда на 2ом курсе зоотехнического факультета
-был обычный день, учебный день, мы заявились в университет и пошли к дверям кафедры, где ждали преподавателя...</p>
-<p> Она сидела в тот момент на стульях в коридоре, как помню щас, она была настроена серьёзно, внимательно осматривала всех кто мимо неё проходил, в тот момент она и не думала, что мы будем одногруппниками, да и мы тоже </p>
+    <h1> РњРѕСЏ Р»СЋР±РёРјР°СЏ РґРµРІРѕС‡РєР°! </h1>
+    <img src="images/image_1.jpg" alt="РњРѕСЏ РґРµРІСѓС€РєР° РСЂРјР°">
+   <p>РС‚Р°Рє, Р·РґРµСЃСЊ РЅРµР±РѕР»СЊС€Р°СЏ РёСЃС‚РѕСЂРёСЏ Рѕ С‚РѕРј, РєР°Рє СЏ РµС‘ РІСЃС‚СЂРµС‚РёР»... </p>
+<p>Р­С‚Рѕ Р±С‹Р»Рѕ Р±Р°РЅР°Р»СЊРЅРѕ РЅР° СѓС‡С‘Р±Рµ, СЏ СѓС‡РёР»СЃСЏ С‚РѕРіРґР° РЅР° 2РѕРј РєСѓСЂСЃРµ Р·РѕРѕС‚РµС…РЅРёС‡РµСЃРєРѕРіРѕ С„Р°РєСѓР»СЊС‚РµС‚Р°
+Р±С‹Р» РѕР±С‹С‡РЅС‹Р№ РґРµРЅСЊ, СѓС‡РµР±РЅС‹Р№ РґРµРЅСЊ, РјС‹ Р·Р°СЏРІРёР»РёСЃСЊ РІ СѓРЅРёРІРµСЂСЃРёС‚РµС‚ Рё РїРѕС€Р»Рё Рє РґРІРµСЂСЏРј РєР°С„РµРґСЂС‹, РіРґРµ Р¶РґР°Р»Рё РїСЂРµРїРѕРґР°РІР°С‚РµР»СЏ...</p>
+<p> РћРЅР° СЃРёРґРµР»Р° РІ С‚РѕС‚ РјРѕРјРµРЅС‚ РЅР° СЃС‚СѓР»СЊСЏС… РІ РєРѕСЂРёРґРѕСЂРµ, РєР°Рє РїРѕРјРЅСЋ С‰Р°СЃ, РѕРЅР° Р±С‹Р»Р° РЅР°СЃС‚СЂРѕРµРЅР° СЃРµСЂСЊС‘Р·РЅРѕ, РІРЅРёРјР°С‚РµР»СЊРЅРѕ РѕСЃРјР°С‚СЂРёРІР°Р»Р° РІСЃРµС… РєС‚Рѕ РјРёРјРѕ РЅРµС‘ РїСЂРѕС…РѕРґРёР», РІ С‚РѕС‚ РјРѕРјРµРЅС‚ РѕРЅР° Рё РЅРµ РґСѓРјР°Р»Р°, С‡С‚Рѕ РјС‹ Р±СѓРґРµРј РѕРґРЅРѕРіСЂСѓРїРїРЅРёРєР°РјРё, РґР° Рё РјС‹ С‚РѕР¶Рµ </p>
 <p> 
 <ul>
-<li> серьёзная </li>
-<li> красивая </li>
-<li> воспитанная </li>
+<li> СЃРµСЂСЊС‘Р·РЅР°СЏ </li>
+<li> РєСЂР°СЃРёРІР°СЏ </li>
+<li> РІРѕСЃРїРёС‚Р°РЅРЅР°СЏ </li>
 </ul>
 </p>
 <p>
 <ol>
-<li> умная </li>
-<li> превлекательная </li>
-<li> общительная </li>
+<li> СѓРјРЅР°СЏ </li>
+<li> РїСЂРµРІР»РµРєР°С‚РµР»СЊРЅР°СЏ </li>
+<li> РѕР±С‰РёС‚РµР»СЊРЅР°СЏ </li>
 </ol>
 </p>
-<p>Кстати, вот её страница, если хотите посмотреть...</p>
+<p>РљСЃС‚Р°С‚Рё, РІРѕС‚ РµС‘ СЃС‚СЂР°РЅРёС†Р°, РµСЃР»Рё С…РѕС‚РёС‚Рµ РїРѕСЃРјРѕС‚СЂРµС‚СЊ...</p>
 
-<a href="https://vk.com/inordgeymer"> Красавица Ирма, не правда ли?</a>
+<a href="https://vk.com/inordgeymer"> РљСЂР°СЃР°РІРёС†Р° РСЂРјР°, РЅРµ РїСЂР°РІРґР° Р»Рё?</a>
 
 <p id="privet">
-<privet> Она перевелась к нам из другого университета, впрочем, это уже было не важно, ведь мой глаз уже лёг на эту красотку и я думал только о ней, всё время </privet>
+<privet> РћРЅР° РїРµСЂРµРІРµР»Р°СЃСЊ Рє РЅР°Рј РёР· РґСЂСѓРіРѕРіРѕ СѓРЅРёРІРµСЂСЃРёС‚РµС‚Р°, РІРїСЂРѕС‡РµРј, СЌС‚Рѕ СѓР¶Рµ Р±С‹Р»Рѕ РЅРµ РІР°Р¶РЅРѕ, РІРµРґСЊ РјРѕР№ РіР»Р°Р· СѓР¶Рµ Р»С‘Рі РЅР° СЌС‚Сѓ РєСЂР°СЃРѕС‚РєСѓ Рё СЏ РґСѓРјР°Р» С‚РѕР»СЊРєРѕ Рѕ РЅРµР№, РІСЃС‘ РІСЂРµРјСЏ </privet>
 <button>Change user</button>
 <script src="scripts/main.js"></script> 
  </body>
